Compile_html.js * added code to emulating the roll20 post processing done to html for local development * added options for command line use * added help text * cannot emulate roll20 js at this time PF2E.scss * made changes to color and borders to create more uniform bordering using css grid * added a left and right global classes, not sure if more of these will be useful yet, these ones most likely won't be useful long term. top.scss and nav.scss * added some grid related stuff for layout visibility while I work on combat Assets folder * added blood and shield images combat-col.html * wrote HTML for HP section * duplicated HP HTML for shield section, WIP combat-col.scss * Wrote some reusable css for all items in the combat column * Added css for all items above the action/spells box * Wrote css for HP and some for armor Also added the output files from the compile script for tracking May add a --prod option to the compile script to generate final files with changes and change the default behavor to generate [filename]_[timestamp].html/css files the won't be tracked

--- a/Pathfinder 2E by PAUR/src/page-char/combat-col.html
+++ b/Pathfinder 2E by PAUR/src/page-char/combat-col.html
@@ -1,1 +1,46 @@
-this is the combat column
+<div class="combat-stats"> 
+    <div class="hp-box combat-col1 combat-row1">
+        <div class="left">
+            <div class="blood-drop">
+                <input class="attr_curr-hp">
+                <img src="assets/blood_drop.png">
+            </div>
+            <h5> Current HP </h5>
+        </div>
+        <div class="right">
+            <h3>Hit points</h3>
+            <div> Max: <input></div>
+            <div> Temp: <input></div>
+            <div> Wounds: <input></div>
+            <div> Dying: <input></div>
+        </div>
+    </div>
+    <div class="armor-box combat-col2 combat-row1">
+    <div class="left">
+            <div class="blood-drop">
+                <input class="attr_curr-hp">
+                <img src="assets/shield.png">
+            </div>
+            <div> Misc: <input></div>
+        </div>
+        <div class="right">
+            <h3>Armour</h3>
+            <div> Shield </div>
+            <div> Raised: <input></div>
+            <div> HP: <input></div>
+            <div> Hardness: <input></div>
+        </div>
+    </div>
+    <div class="conditions-box combat-col1 combat-row2">
+    Conditions and buffs
+    </div>
+    <div class="resistance-box combat-col2 combat-row2">
+    Resistances
+    </div>
+    <div class="saving-throws-box combat-row3">
+    Saving Throws
+    </div>
+</div>
+<div class="combat-actions">
+
+</div>
