--- a/Pathfinder 2E by PAUR/pathfinder2_gag.html
+++ b/Pathfinder 2E by PAUR/pathfinder2_gag.html
@@ -9,7 +9,52 @@
     <div class="col1">
 this is the stat column    </div>
     <div class="col2">
-this is the combat column    </div>
+<div class="combat-stats"> 
+    <div class="hp-box combat-col1 combat-row1">
+        <div class="left">
+            <div class="blood-drop">
+                <input class="attr_curr-hp">
+                <img src="http://www.broadsidehd.com/paur/blood_drop.png">
+            </div>
+            <h5> Current HP </h5>
+        </div>
+        <div class="right">
+            <h3>Hit points</h3>
+            <div> Max: <input></div>
+            <div> Temp: <input></div>
+            <div> Wounds: <input></div>
+            <div> Dying: <input></div>
+        </div>
+    </div>
+    <div class="armor-box combat-col2 combat-row1">
+    <div class="left">
+            <div class="blood-drop">
+                <input class="attr_curr-hp">
+                <img src="http://www.broadsidehd.com/paur/shield.png">
+            </div>
+            <div> Misc: <input></div>
+        </div>
+        <div class="right">
+            <h3>Armour</h3>
+            <div> Shield </div>
+            <div> Raised: <input></div>
+            <div> HP: <input></div>
+            <div> Hardness: <input></div>
+        </div>
+    </div>
+    <div class="conditions-box combat-col1 combat-row2">
+    Conditions and buffs
+    </div>
+    <div class="resistance-box combat-col2 combat-row2">
+    Resistances
+    </div>
+    <div class="saving-throws-box combat-row3">
+    Saving Throws
+    </div>
+</div>
+<div class="combat-actions">
+
+</div>    </div>
     <div class="col3">
 this is the skill column    </div>
 </div></div>
